--- a/kişisel web sitesi/style.css
+++ b/kişisel web sitesi/style.css
@@ -258,3 +258,69 @@ footer ul {
     background-color: #dfa;
     text-align: center;
 }
+/*ŞEHRİM SAYFASI İÇİN CSS*/
+.sehrimSayfa{
+    margin: 0;
+    padding: 0;
+    background: #dfa;
+    height: 100vh;
+    background-size: 100% 100%;
+    display: grid;
+}
+.Bolu{
+    display: grid;
+    height: 100vh;
+    background: #fff;
+    width: 40%;
+    height: 530px;
+    border-radius: 10px;
+    place-items: center;
+    margin: 30px 20px 20px 90px;
+}
+.Bolu .logosehrim img{
+    position: absolute;
+    width: 100px;
+    height: 60px;
+    left: 38%;
+    top: 40px;
+    border: 5px solid transparent;
+}
+.Bolu .titleLogo{
+    color: brown;
+}
+.bilgi p{
+    color: #495560;
+}
+.bilgi h4{
+    color: rgb(37, 94, 77);
+}
+.bilgi ul li{
+    list-style-type: circle;
+    color: #3f4953;
+}
+.Gerede{
+    display: grid;
+    height: 100vh;
+    background: #fff;
+    width: 40%;
+    height: 530px;
+    border-radius: 10px;
+    place-items: center;
+    margin: 30px 200px 20px 820px;
+    position: absolute;
+}
+.Gerede .logosehrim img{
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    left: 84%;
+    top: 8px;
+    border: 5px solid transparent;
+}
+.Gerede .titleLogo{
+    color: brown;
+}
+#carouselExampleCaptions{
+    width: 300px;
+    height: 250px;
+}
