--- a/kişisel web sitesi/style.css
+++ b/kişisel web sitesi/style.css
@@ -3,11 +3,7 @@
 .anasayfaa{
     margin: 0;
     padding: 0;
-}
-.anaKısım{
-    background: url(gölcükAK.jpeg);
-    height: 100vh;
-    background-size: 100% 100%;
+    background: #dfa;
 }
 .anaKısım .navbar{
     width: 100%;
@@ -16,8 +12,15 @@
 }
 .navbar .logo{
     display: inline-block;
+    font-size: 25px;
+    color: #495560;
     margin-left: 50px;
-    margin-top: 20px;
+    margin-top: 0px;
+    font-family: sans-serif;
+}
+.navbar .logo .fa-solid{
+    margin-right: 8px;
+    font-size: 25px;
 }
 .navbar ul{
     float: right;
@@ -34,6 +37,42 @@
     text-decoration: none;
     font-size: 20px;
     padding: 6px 13px;
+    font-family: Roboto;
+    transition: .5s;
+}
+.navbar ul li a.aktif,
+.navbar ul li a:hover {
+    background: rgb(14, 135, 153);
+    border-radius: 2px;
+}
+.navbar .fas{
+    margin-right: 8px;
+    font-size: 15px;
+}
+.hakkımda{
+    background: rgb(234, 233, 233);
+    width: 600px;
+    height: 175px;
+    border-radius: 30px;
+    margin: 40px 80px 90px 450px;
+}
+.hakkımda h3{
+    color: rgb(87, 21, 21);
+    background: #ccc;
+    border-radius: 15px;
+    width: 200px;
+    margin: auto;
+    text-align: center;
+}
+.hakkımda p{
+    color: #495560;
+    text-align: center;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.grid .g-col-6{
+    margin: 10px 20px 200px 50px;
+    float: left;
 }
 /*LOGIN SAYFASI İÇİN CSS*/
 .loginsayfa{
@@ -48,6 +87,7 @@
     place-items: center;
     background: linear-gradient(to right,#dfa 0%, rgb(119, 194, 175) 100%);
 }
+
 .anaKısımLogin{
     background: #fff;
     max-width: 350px;
@@ -258,6 +298,76 @@ footer ul {
     background-color: #dfa;
     text-align: center;
 }
+/*İLETİŞİM SAYFASI*/
+.iletisim{
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(to right,#dfa 0%, rgb(119, 194, 175) 100%);
+    height: 100vh;
+    background-size: 100% 100%;
+}
+.iletisim .navbar{
+    width: 100%;
+    height: 80px;
+    background-color: rgb(22, 112, 214, 0.4);
+}
+.iletisim .navbar .logo{
+    display: inline-block;
+    font-size: 25px;
+    color: #495560;
+    margin-left: 50px;
+    margin-bottom: 50px;
+    font-family: sans-serif;
+}
+.iletisim .navbar  .logo .fa-solid{
+        margin-right: 8px;
+        font-size: 25px;
+}
+.iletisim .navbar  ul{
+    float: right;
+    margin-right: 20px;
+}
+.iletisim .navbar  ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 8px;
+    line-height: 80px;
+}
+.iletisim .navbar  ul li a{
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 6px 13px;
+    font-family: Roboto;
+    transition: .5s;
+}
+.iletisim .navbar  ul li a:hover {
+    background: rgb(36, 144, 160);
+    border-radius: 2px;
+}
+.iletisim .navbar  .fas{
+    margin-right: 8px;
+    font-size: 15px;
+}
+.iletisim h3{
+    margin-top: 10px;
+    text-align: center;
+}
+.row{
+    width: 50%;
+    height: 50%;
+}
+.row .col{
+    margin: 10px 8px 15px 8px;
+    font-size: 18px;
+    color: #24292e;
+}
+.form-check{
+    margin-left: 15px;
+}
+.kapsar{
+    font-family: sans-serif;
+}
 /*ŞEHRİM SAYFASI İÇİN CSS*/
 .sehrimSayfa{
     margin: 0;
@@ -267,15 +377,16 @@ footer ul {
     background-size: 100% 100%;
     display: grid;
 }
+
 .Bolu{
     display: grid;
     height: 100vh;
-    background: #fff;
+    background: rgb(234, 240, 226);
     width: 40%;
-    height: 530px;
+    height: 580px;
     border-radius: 10px;
     place-items: center;
-    margin: 30px 20px 20px 90px;
+    margin: 60px 20px 20px 90px;
 }
 .Bolu .logosehrim img{
     position: absolute;
@@ -284,6 +395,8 @@ footer ul {
     left: 38%;
     top: 40px;
     border: 5px solid transparent;
+    margin-top: 110px;
+    
 }
 .Bolu .titleLogo{
     color: brown;
@@ -301,13 +414,15 @@ footer ul {
 .Gerede{
     display: grid;
     height: 100vh;
-    background: #fff;
+    background: rgb(234, 240, 226);
     width: 40%;
-    height: 530px;
+    height: 580px;
     border-radius: 10px;
     place-items: center;
     margin: 30px 200px 20px 820px;
     position: absolute;
+    margin-top: 140px;
+    
 }
 .Gerede .logosehrim img{
     position: absolute;
@@ -321,6 +436,57 @@ footer ul {
     color: brown;
 }
 #carouselExampleCaptions{
-    width: 300px;
-    height: 250px;
+    width: 650px;
+    height: 380px;
+    margin: 50px 450px ;
+}
+.shrbilgi{
+    border-radius: 35px;
+    background: rgb(205, 229, 170);
+    width: 70%;
+    height: 800px;
+    margin: auto;
+}
+.shrbilgi ul li{
+    color: rgb(200, 148, 81); 
+}
+.sehrimSayfa .navbar{
+    width: 100%;
+    height: 80px;
+    background-color: rgb(22, 112, 214, 0.4);
+}
+.sehrimSayfa .navbar .logo{
+    display: inline-block;
+    font-size: 25px;
+    color: #495560;
+    margin-left: 50px;
+    margin-top: 0px;
+    font-family: sans-serif;
+}
+.sehrimSayfa .navbar .logo .fa-solid{
+    margin-right: 8px;
+    font-size: 25px;
+}
+.sehrimSayfa .navbar ul{
+    float: right;
+    margin-right: 20px;
+}
+.sehrimSayfa .navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 8px;
+    line-height: 80px;
+}
+.sehrimSayfa .navbar ul li a{
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    padding: 6px 13px;
+    font-family: Roboto;
+    transition: .5s;
+}
+.sehrimSayfa .navbar ul li a.aktif,
+.sehrimSayfa .navbar ul li a:hover {
+    background: rgb(14, 135, 153);
+    border-radius: 2px;
 }
